--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react-dom": "^19.1.3",
     "@types/styled-components": "^5.1.34",
     "cross-env": "^7.0.3",
+    "eslint": "^9.27.0",
     "ignore-loader": "^0.1.2",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.35",
